--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <ul>
   <li><a routerLink="">Home</a></li>
   <li><a routerLink="about/48">About</a></li>
+  <li><a routerLink="crypto">Crypto</a></li>
 </ul>
 
 <router-outlet></router-outlet>
